# resourcepack-gen

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
resourcepack-gen-cli/: Cargo.toml  README.md
resourcepack-gen-cli/src/: main.rs
resourcepack-gen-tools/: Cargo.toml  README.md
resourcepack-patcher/: Cargo.toml
resourcepack-patcher/src/: lib.rs
